# src/swagger.json
@@ -7,9 +7,7 @@
   },
   "host": "localhost:3000",
   "basePath": "/",
-  "schemes": [
-    "http"
-  ],
+  "schemes": ["http"],
   "paths": {
     "/auth/create": {
       "post": {
@@ -1177,6 +1175,16 @@
           }
         }
       }
+    },
+    "/infra/Vulnerable-ci-3": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -1214,7 +1222,5 @@
       }
     }
   },
-  "apis": [
-    "./src/routes/index.js"
-  ]
+  "apis": ["./src/routes/index.js"]
 }
